# Genesis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Genesis/: CMakeLists.txt
Genesis/Genesis/: Genesis.hpp
Genesis/Genesis/Core/: Application.cpp  Application.hpp  Bitset.cpp  StringHash.hpp  Transform.cpp  Transform.hpp  Types.hpp  VectorTypes.hpp
Genesis/Genesis/Debug/: Assert.hpp
Genesis/Genesis/Ecs/: EcsTypes.hpp  EntitySignatureTable.cpp  EntitySignatureTable.hpp  EscWorld.hpp  MemoryArray.hpp
Genesis/Genesis/Entity/: DebugCamera.hpp  Entity.hpp  MeshComponent.hpp  TransformSystem.cpp  TransformSystem.hpp  World.cpp  World.hpp  WorldRenderer.cpp  WorldRenderer.hpp
Genesis/Genesis/Input/: ArrayInputDevice.hpp  InputManager.hpp  KeyboardDevice.cpp
Genesis/Genesis/Job/: JobSystem.cpp  JobSystem.hpp
Genesis/Genesis/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  ReactPhyscis.hpp  RigidBody.cpp  RigidBody.hpp
Genesis/Genesis/Rendering/: CommandBuffer.hpp  DelayedResourceDeleter.hpp  DescriptorSet.hpp  ImGuiRenderer.cpp  RenderLayer.hpp  RenderSystem.cpp  RenderSystem.hpp  RenderUtils.hpp  Renderer.cpp  Renderer.hpp  RenderingBackend.hpp  RenderingTypes.hpp  ResourceLoaders.cpp  ResourceLoaders.hpp  Sampler.hpp  ShaderInputDescription.hpp  Skeleton.cpp  VertexInputDescription.hpp
Genesis/Genesis/Scene/: Camera.hpp  Frustum.cpp  Frustum.hpp  Material.hpp  Mesh.hpp  MeshPool.cpp  ResourcePool.hpp  Scene.hpp  SceneRenderer.cpp  SceneRenderer.hpp
Genesis/include/Genesis/: pch.hpp
Genesis/source/Component/: Hierarchy.cpp  NodeComponent.cpp
Genesis/source/Core/: Application.cpp  Bitset.cpp  Transform.cpp
Genesis/source/Debug/: Log.cpp
Genesis/source/Ecs/: EntitySignatureTable.cpp  EntityWorld.cpp  Hierarchy.cpp
Genesis/source/Editor/: ConsoleWindow.cpp  EntityPropertiesWindow.cpp  HierarchyWindow.cpp  WorldViewWindow.cpp
Genesis/source/Entity/: Entity.cpp  EntityManager.cpp  Mesh.cpp  TransformSystem.cpp  World.cpp  WorldRenderer.cpp
Genesis/source/FrameGraph/: FrameGraph.cpp  FrameTask.cpp  RenderTask.cpp  SwapchainRenderTask.cpp
Genesis/source/Game/: ChunkMeshGenerator.cpp
Genesis/source/Input/: ArrayInputDevice.cpp  InputManager.cpp  JoystickDevice.cpp  KeyboardDevice.cpp  MouseDevice.cpp
Genesis/source/Job/: JobSystem.cpp
Genesis/source/LegacyRendering/: LegacyAnimatedMeshRenderer.cpp  LegacyImGui.cpp  LegacyMaterialPool.cpp  LegacyMeshPool.cpp  LegacyMeshRenderer.cpp  LegacyRenderingSystem.cpp  LegacySceneRenderer.cpp  LegacyTexturePool.cpp  LegacyWorldRenderer.cpp
Genesis/source/Physics/: CollisionComponent.cpp  CollisionShape.cpp  PhysicsSystem.cpp  PhysicsWorld.cpp  RigidBody.cpp
Genesis/source/PhysicsTest/: PhysicsTestSystems.cpp
Genesis/source/Platform/: FileSystem.cpp
Genesis/source/RenderGraph/: FramebufferRenderPass.cpp  RenderGraph.cpp  RenderPass.cpp
Genesis/source/Rendering/: BaseImGui.cpp  Frustum.cpp  ImGuiRenderer.cpp  RenderSystem.cpp  ResourceLoaders.cpp
Genesis/source/Resource/: GltfLoader.cpp  MaterialPool.cpp  Mesh.cpp  MeshPool.cpp  ObjLoader.cpp  ResourceLoaders.cpp  TexturePool.cpp
Genesis/source/Scene/: Frustum.cpp  Hierarchy.cpp  MeshPool.cpp  Scene.cpp  SceneSerializer.cpp
Genesis/source/World/: Entity.cpp  GameObject.cpp  GameWorld.cpp  Hierarchy.cpp  World.cpp  WorldManager.cpp  WorldSimulator.cpp  game_object.cpp
Genesis/src/Genesis/: Application.cpp  Application.hpp  DebugCamera.hpp  Entity.hpp  GameScene.cpp  GameScene.hpp  Genesis.hpp  GenesisApplication.cpp  GenesisApplication.hpp  Layer.hpp  LayerStack.hpp  WorldTransform.hpp
Genesis_Editor/: CMakeLists.txt  imgui.ini
Genesis_Editor/include/Genesis_Editor/: EditorApplication.hpp
Genesis_Editor/res/: Cube_Test.glb  Porthole.glb  RoundShip.glb  Shapes.glb  Ship_In.glb  ground.entity  imgui.ini  red.mat
Genesis_Editor/res/imgui/: compile.bat
Genesis_Editor/res/materials/: blue.mat  green.mat  red.mat
Genesis_Editor/res/shaders_opengl/: Environment.slib  Gamma.slib  GammaCorrection.glsl  Lighting.slib  Material.slib  Model.frag  Model.vert  ModelDirectional.frag  ModelPoint.frag  Pbr.slib  Window.frag
Genesis_Editor/source/: EditorApplication.cpp  Genesis_Editor.cpp
Genesis_Editor/source/Windows/: AssetBrowserWindow.cpp  EntityHierarchyWindow.cpp  EntityListWindow.cpp  EntityPropertiesWindow.cpp  MaterialEditorWindow.cpp  RenderStatisticsWindow.cpp  SceneViewWindow.cpp  SceneWindow.cpp  WorldViewWindow.cpp
SandBox/: CMakeLists.txt
SandBox/src/Sandbox/: SandboxMain.cpp
Sandbox/: CMakeLists.txt  RunSandbox.bat
Sandbox/include/Game/: Chunk.hpp  ChunkMeshGenerator.hpp
Sandbox/include/Sandbox/: SandboxApplication.hpp
Sandbox/res/: Bridge_Glass.glb  Bridge_Inside.glb  Bridge_Outside.glb  Cube.glb  Interpolation_Test.gltf  Material.json  Porthole_Inside.glb  RoundBridge.mtl  RoundShip.glb  Ship_Out.glb  cube1.fbx  temp.fbx  temp1.fbx
Sandbox/res/imgui/: opengl.frag
Sandbox/res/materials/: blue.csv  grid.csv  red.csv  white.csv
Sandbox/res/shaders_glsl/: Model.frag  Model.vert  ScreenQuad.vert  frag_main.slib
Sandbox/res/shaders_opengl/: Animated.frag  Animated.vert  Lighting.slib  Model.frag  Model.vert  Model_Window.frag  Window.frag  Window.vert  glTF.frag  glTF.vert  light_directional.slib  light_directional_shadow.slib  light_point.slib  model_header.slib  model_permutations.shader  model_tail.slib  normal_mapped.slib  uv_basic.slib  uv_parallax_occlusion.slib
Sandbox/res/shaders_vulkan/: ScreenQuad.frag
Sandbox/res/temp_shaders/: AnimatedModel.frag  AnimatedModel.vert  Model.frag  Model.vert  test.frag  test.vert
Sandbox/resources/imgui/: compile_vulkan.bat  (+4 more)
Sandbox/source/: SandboxApplication.cpp  SandboxMain.cpp  main.cpp
ShaderUtil/: CMakeLists.txt  color_albedo.slib  color_texture.slib  light_ambient.slib  model_permutations.shader  model_tail.slib  normal_basic.slib  uv_parallax.slib
ShaderUtil/source/: ShaderPermutation.cpp
core/: CMakeLists.txt
core/source/: lib.cpp
engine/: CMakeLists.txt
types/: CMakeLists.txt
types/source/: lib.cpp
(+668 files in other folders)
